# qa_guru_hw_16

./: README.md  pyproject.toml
